# dusty_shelf

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  client-cert.pem  client-key.pem  diesel.toml  server-ca.pem
controllers/: Cargo.toml
controllers/src/: dusty_shelf.rs  lib.rs
controllers/src/auth/: auth.rs
controllers/src/dusty_b/: dusty_b.rs  mod.rs
controllers/src/server/: catchers.rs  config.rs  ds_errors.rs  launch_failures.rs  mod.rs
dtos/: Cargo.toml
dtos/src/: dtos.rs  lib.rs
main/: Cargo.toml
main/src/: main.rs
migrations/2022-11-18-064529_books/: up.sql
migrations/2022-12-14-141651_encoded_book/: up.sql
models/: Cargo.toml
models/src/: lib.rs  models.rs  scheme.rs
services/: Cargo.toml
services/src/: lib.rs  services.rs
services/src/db_conn/: mod.rs
src/: main.rs  models.rs  schema.rs  scheme.rs
