[package]
name = "dusty_shelf"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "1.4.8"
okapi = { version = "0.7.0-rc.1" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
rocket_okapi = { version = "=0.8.0-rc.2", features = ["swagger", "rapidoc"] }
schemars = "0.8.10"
serde = { version = "1.0.147", features = ["derive"] }
dotenv = "0.15.0"
lazy_static = { version = "1.4.0", default-features = false }
jsonwebtoken = { version = "8.2.0", default-features = false }
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
