[package]
name = "dtos"
version = "0.3.0"
authors = ["Harsh Kumar Moroliya <hmoroliya@ariqt.com>"]
edition = "2021"

[dependencies]
okapi = { version = "0.7.0-rc.1" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = { version = "=0.8.0-rc.2", features = ["swagger", "rapidoc"] }
schemars = "0.8.10"
serde = { version = "1.0.147", features = ["derive"] }

[dependencies.models]
path = "../models"
version = "0.3.0"
