[package]
name = "main"
version = "0.3.0"
authors = ["Harsh Kumar Moroliya <hmoroliya@ariqt.com>"]
edition = "2021"

[dependencies]
log = { version = "0.4.17", features = ["std"] }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
dotenv = { version = "0.15.0", default-features = false }
jsonwebtoken = { version = "8.2.0", default-features = false }
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
serde_json = { version = "1.0.91", default-features = false }

[dependencies.controllers]
path = "../controllers"
version = "0.3.0"
