[package]
name = "models"
version = "0.3.0"
authors = ["Harsh Kumar Moroliya <hmoroliya@ariqt.com>"]
edition = "2021"

[dependencies]
diesel = "1.4.8"
okapi = { version = "0.7.0-rc.1" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
rocket_okapi = { version = "=0.8.0-rc.2", features = ["swagger", "rapidoc"] }
schemars = "0.8.10"
serde = { version = "1.0.147", features = ["derive"] }

